fixed slight alignment issue with countdown days

--- a/wp-content/themes/Broadway/assets/scss/responsive.scss
+++ b/wp-content/themes/Broadway/assets/scss/responsive.scss
@@ -19,6 +19,7 @@
 					.countdown{ 
 						margin: 0 5% 0 0; 
 						span{ width: 100%; }
+						.number{ margin: 0 0 0 2px; }
 						.words{ padding: 0 5px 10px; }
 						.date{ font-size: 0.95em; }
 					}
